feat(updater): automatically migrate and patch ProjectZomboid64.json for 0.8.2 to 0.9.5 upgrades [skip ci]